added frontend readme

--- a/backend/.env
+++ b/backend/.env
@@ -11,8 +11,8 @@ DB_PASSWORD=
 DB_PORT=5432
 
 # Health API config
-HEALTH_API_BASE=http:/10.191.187.224:9876/api
+HEALTH_API_BASE=http://10.191.187.224:9876/api
 HEALTH_API_TOKEN=
 DAYS_BACK=7
-#
+#10.191.187.224
 #172.20.10.2
