added AI for both patients and doctors both personalized

--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,6 @@ HEALTH_API_TOKEN=
 DAYS_BACK=7
 #10.191.187.224
 #172.20.10.2
+
+# Gemini API config
+GEMINI_API_KEY=AIzaSyAqBHqCZ0jHbhFSP0XBSq3KHM40Sc2Ts1M
